--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<cucumber.reporting.version>5.3.1</cucumber.reporting.version>
+		<!-- 
+		 	<maven.compiler.plugin>3.7.0</maven.compiler.plugin>
+		    <maven.compiler.source>1.8</maven.compiler.source>
+		    <maven.compiler.target>1.8</maven.compiler.target>
+		    <java.version>1.8</java.version>
+		    <karate.version>0.8.0.RC4</karate.version>
+		 -->
 	</properties>
 
 	<dependencies>
@@ -49,7 +57,12 @@
 			<version>8.0.20</version>
 		</dependency>
 
-
+		<dependency>
+		        <groupId>net.masterthought</groupId>
+		        <artifactId>cucumber-reporting</artifactId>
+		        <version>${cucumber.reporting.version}</version>
+		        <scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
