--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,14 @@
 			<version>0.9.5</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- 
+		<dependency>
+		    <groupId>com.intuit.karate</groupId>
+		    <artifactId>karate-junit5</artifactId>
+		    <version>0.9.6</version>
+		    <scope>test</scope>
+		</dependency>
+ 		-->
 		<dependency>
 			<groupId>net.masterthought</groupId>
 			<artifactId>cucumber-reporting</artifactId>
@@ -75,12 +82,24 @@
 			</testResource>
 		</testResources>
 
+
+		
 		<plugins>
+			<plugin>
+				<!-- Compiler plug-in -->
+        		<groupId>org.apache.maven.plugins</groupId>
+        			<artifactId>maven-compiler-plugin</artifactId>
+			        <version>3.8.1</version>
+			        <configuration>
+			          <source>1.8</source>
+			          <target>1.8</target>
+			        </configuration>
+  			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.10</version>
+				<version>2.22.2</version>
 				<configuration>
 					<argLine>-Dfile.encoding=UTF-8</argLine>
 
